components/dark.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap'); */

/* :root {
    --primary-color: #0cafff;
    --heading-color: #6b7280;
    --off-white: #34d399;
} */
body {
    font-family: 'Quicksand', sans-serif;
    margin: 0px;
    background-color: black;
}

hr {
    margin: 2.5rem 0rem;
}
/* contaiers */

.container {
    padding: 0rem 1rem;
    color: white;
}

.container-center {
    max-width: 700px;
    margin: auto;
}

/* .section p {
    text-align: center;
} */

/* links */

.link {
    text-decoration: none;
    padding: 0.5rem 1rem;
    color: white;
    max-width: fit-content;
    margin-bottom: 0.75rem;
}

/* .wrapper .link {
    display: inline-flexbox;
    text-align: center;
    align-items: center;
} */

.link-primary {
    background-color: #6f7375;
    border-radius: 5rem;
    color: white;
}

.link-secondary {
    color: white;
    border-radius: 5rem;
    border: 1px solid #6f7375;
}

.link-length {
    max-width: fit-content;
}
.link.link-length {
    background: #6f7375;
}

/* lists */

.list-non-bullet {
    list-style: none;
}

.list-item-inline {
    display: inline;
    padding: 0rem 0.5rem;
}
.social-links {
    margin: 5px 0px;
}
.footer a {
    color: #cf1666;
}

.navigation {
    background: #232628;
    color: white;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    box-shadow: 0 0 10px #4f5456;
}

.navigation .nav-brand {
    font-weight: bold;
    margin: 0;
    font-size: 30px;
    color: #cf1666;
}

.navigation .link {
    color: white;
}

.navigation .nav-pills {
    text-align: right;
}

.navigation .link-active {
    font-weight: bolder;
    color: black;
    background-color: #cf1666;
    border-radius: 1rem;
    box-shadow: 0 0 15px black;
}

.navigation .container {
    text-align: justify;
}

/* header */

.hero {
    padding: 2rem;
    /* padding-top: 5rem; */
}

.hero .hero-image {
    width: 100%;
    max-width: 350px;
    height: auto;
    display: block;
    margin: auto;
    object-fit: cover;
}

.hero-image-blog {
    justify-content: center;
    width: 100%;
    max-width: 350px;
    height: auto;
    padding-top: 2rem;
}

.hero .hero-heading {
    padding-top: 1rem;
    color: white;
    text-align: center;
}

.hero-span {
    color: #cf1666;
}

.hero-blog {
    text-align: center;
    color: white;
}

.nav-pills {
    display: inline;
    padding: 0;
    margin: 5px;
}

/* sections */
.section h1 {
    text-align: center;
}

ul {
    padding-left: 0px;
}

.section {
    padding: 1.5rem;
    background: #232628;
    color: black;
    border-radius: 1rem;
    margin-bottom: 1rem;
    margin-left: 10%;
    margin-right: 10%;
    display: flex;
    align-items: center;
    text-align: center;
    box-shadow: 0 0 10px #4f5456;
}

.ow {
    background-color: var(--primary-color);
}

.about-me-span,
.projects-span,
.blogs-span {
    color: #cf1666;
    text-decoration: none;
}

/* footer */

footer {
    background-color: #232628;
    padding: 1rem 0rem;
    text-align: center;
    color: white;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    box-shadow: 0 0 10px #4f5456;
}

.footer .links {
    color: #cf1666;
}

.footer ul {
    padding-inline-start: 0px;
}

.footer .footer-header {
    font-weight: bold;
    font-size: large;
}

.nav-brand {
    display: flex;
    float: left;
    font-size: 100px;
}

body {
    width: 100%;
}

@media (max-width: 700px) {
    .container {
        display: flex;
        flex-direction: column;
    }
    .nav-brand {
        justify-content: center;
        display: flex;
        padding-bottom: 0.5rem;
    }
    .nav-pills {
        justify-content: center;
        display: flex;
    }
    .wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}
.topButton {
    background-color: #cf1666;
    border-radius: 50%;
    position: fixed;
    bottom: 25px;
    right: 25px;
}
html {
    scroll-behavior: smooth;
}

@media (max-width: 500px) {
    .topButton {
        background-color: #cf1666;
        border-radius: 50%;
        position: fixed;
        bottom: 50px;
        right: 25px;
    }
}

/* +++++++++++++++ Toggle Setup  +++++++++++++++++ */

.label {
    top: 2px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px;
    position: relative;
}
/* 
.menuBar {
    display: flex;
    margin-top: 10px;
    align: left;
} */

/* +++++++++++++++Dark Mode Settings+++++++++++++++ */

.checkbox {
    opacity: 0;
    position: absolute;
}

.label {
    background-color: grey;
    border-radius: 50px;
    cursor: pointer;
    display: flex;
    float: right;
    align-items: center;
    justify-content: space-between;
    padding: 5px;
    position: relative;
    height: 15px;
    width: 42px;
    transform: scale(1.5);
    margin-right: 20px;
    margin-top: 10px;
}

.label .ball {
    background-color: black;
    border-radius: 50%;
    position: absolute;
    /* top: 2px; */
    /* left: 2px; */
    height: 20px;
    width: 20px;
    transform: translateX(0px);
    transition: transform 0.2s linear;
}

.checkbox:checked + .label .ball {
    transform: translateX(23px);
}

.fa-moon {
    color: #f1c40f;
}

.fa-sun {
    color: #f39c12;
}

